syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.atlas.platform.grpc.protobuf.user";

import "google/protobuf/empty.proto";

package user;

service UserService {
  rpc ListUser (ListUserRequestProto) returns (UserListProto) {};
}

message ListUserRequestProto {
  repeated int32 user_id = 1;
}

message UserProto {
  int32 id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone_number = 5;
}

message UserListProto {
  repeated UserProto user = 1;
}
